css/main.css
/* ... */
:target {
    scroll-margin-top: calc(7.2rem + 2.6rem);
}

.wrapper {
    max-width: calc(100% - 10rem);
    width: 100%;
    margin: 0 auto;
}

body {
    font-family: 'Cygre', sans-serif;
    font-weight: 400;
    background-color: var(--background-color);
    font-size: var(--font-size-3);
    letter-spacing: 0.39px;
    color: var(--main-text-color);
    margin: 0;
    display: flex;
    flex-direction: column;
    min-height: 100%;
}

footer {
    font-size: var(--font-size-1);
    flex: 0 0 auto;
    display: flex;
    justify-content: space-between;
    padding: 2.275rem 5rem;
    color: var(--else-text-color-33);
    align-items: center;
}

footer p {
    display: block;
}

header {
    display: flex;
    justify-content: space-between;
    background-color: var(--block-color);
    box-shadow: var(--shadow-big);
    border-radius: 0 0 2rem 2rem;
    color: var(--main-accent-color);
    padding: 2.1rem 5rem;
    align-items: center;
    font-size: var(--font-size-1);
    position: sticky;
    top: 0;
    z-index: 999;
    gap: 11.6rem;
}

header .phone-link {
    display: flex;
    gap: 1rem;
    align-items: center;
    font-family: 'Unbounded';
    font-weight: 900;
    color: var(--main-text-color);
    font-size: var(--font-size-3);
}

header .phone-link img {
    border-radius: 0;
    margin: 0;
    min-width: 30px;
    max-width: 30px;
    min-height: 30px;
    max-height: 30px;
}

header img {
    object-fit: cover;
    width: 3rem;
    height: 3rem;
    border-radius: 1.5rem;
}

header div {
    display: flex;
    align-items: center;
    gap: 1.6rem;
}

header div a {
    color: var(--main-accent-color);
}

header div a:hover {
    color: var(--main-text-color);
}

.header__avatar {
    display: flex;
}

main {
    flex: 1 0 auto;
}

p {
    margin: 0;
}

a {
    text-decoration: none;
    font-size: var(--font-size-1);
    transition: 0.2s;
    line-height: 1;
    color: var(--else-text-color-50);
    -webkit-tap-highlight-color: transparent;
}

.title {
    height: 1px;
    overflow: hidden;
    position: absolute;
    width: 1px;
}

.reg__form button.disabled {
    pointer-events: none;
    background-color: var(--else-text-color-33);
}

button {
    font-family: 'Cygre', sans-serif;
    font-weight: 400;
    font-size: var(--font-size-3);
    color: var(--main-text-color);
    transition: 0.2s;
    cursor: pointer;
    -webkit-tap-highlight-color: transparent;
}

input {
    font-family: 'Cygre', sans-serif;
    font-weight: 400;
    font-size: var(--font-size-1);
    color: var(--main-text-color);
    transition: 0.2s;
    line-height: 1;
    -webkit-tap-highlight-color: transparent;
}

textarea {
    font-family: 'Cygre', sans-serif;
    font-weight: 400;
    font-size: var(--font-size-1);
    color: var(--main-text-color);
    transition: 0.2s;
    line-height: 1;
    -webkit-tap-highlight-color: transparent;
}

label {
    -webkit-tap-highlight-color: transparent;
}

div {
    -webkit-tap-highlight-color: transparent;
}

::placeholder {
    font-family: 'Cygre';
    font-size: var(--font-size-1);
    color: var(--else-text-color-50);
    line-height: 1;
    vertical-align: middle;
}

.auth__section,
.reg__section {
    max-width: calc(35rem + 2.6rem*2);
    height: max-content;
    background-color: var(--block-color);
    box-shadow: var(--shadow-small);
    border-radius: 2rem;
    padding: 1.6rem 2.6rem;
    display: flex;
    margin: 0 auto;
    margin-top: 1.6rem;
    margin-bottom: 2.6rem;
    align-items: flex-start;
    gap: 4.1rem;
    position: relative;
}

.auth__center,
.reg__center {
    display: flex;
    flex-direction: column;
    min-height: calc(var(--vh, 1vh) * 100 - 7.2rem*2);
    justify-content: center;
}

.auth__notify {
    font-size: var(--font-size-2);
    padding: 1.6rem 2.1rem;
    box-shadow: var(--shadow-small);
    border-radius: 1rem;
    margin: 0 auto;
    max-width: max-content;
    scale: 90%;
    opacity: 0;
    transition: 0.2s;
    left: 0;
    right: 0;
    text-align: center;
    position: absolute;
    top: calc(-4.6rem - 1.6rem);
}

.auth__notify.success {
    scale: 100%;
    opacity: 100%;
    background-color: var(--block-accent-color-210);
    color: var(--main-accent-color);
}

.auth__notify.reject {
    scale: 100%;
    opacity: 100%;
    background-color: var(--like-button-accent-color);
    color: var(--error-accent-color);
}

.auth__notify.info {
    scale: 100%;
    opacity: 100%;
    background-color: var(--block-color);
    color: var(--main-text-color);
}

.auth__notify .auth__notify-username {
    font-weight: 600;
}

.div-line {
    width: 100%;
    height: 1px;
    background-color: var(--block-accent-color-110);
}

.auth__section img,
.reg__section img {
    height: 30rem;
    width: 30rem;
}

.auth__form,
.reg__form {
    width: 100%;
    margin-top: 1.6rem;
}

input.auth-and-reg,
input.auth-and-reg::placeholder {
    font-size: var(--font-size-2);
}

.auth__form legend,
.reg__form legend {
    font-size: var(--font-size-4);
    font-weight: 600;
    margin: 0;
    padding: 0;
    margin-bottom: 4.1rem;
}

.auth__form label,
.reg__form label {
    display: inline-block;
    margin: 0;
    padding: 0;
    margin-bottom: 2.6rem;
    width: 100%;
    font-weight: 600;
}

.auth__form label:last-child,
.reg__form label:last-child {
    margin-bottom: 6.6rem;
}

.auth__form input,
.reg__form input {
    width: 100%;
    min-height: 4rem;
    border-radius: 2rem;
    outline: none;
    background-color: transparent;
    border: 1px solid var(--else-text-color-33);
    padding: 0 2.6rem;
    margin-top: 0.8rem;
}

.auth__form input:hover,
.reg__form input:hover {
    border: 1px solid var(--else-text-color-50);
}

.auth__form input:focus,
.reg__form input:focus {
    border: 1px solid var(--else-text-color-50);
}

.auth__form input:valid,
.reg__form #reg__email:valid {
    border: 1px solid var(--main-accent-color);
    color: var(--main-accent-color);
}
/* ... */

